--- a/NHDai19DemoEF.Data/NHDai19DemoEF.Data.csproj
+++ b/NHDai19DemoEF.Data/NHDai19DemoEF.Data.csproj
@@ -49,6 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DemoDBContext.cs" />
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Initializer\SeedData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
