--- a/NHDai19DemoEF.Common/NHDai19DemoEF.Common.csproj
+++ b/NHDai19DemoEF.Common/NHDai19DemoEF.Common.csproj
@@ -88,5 +88,23 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NHDai19DemoEF.Data\NHDai19DemoEF.Data.csproj">
+      <Project>{04D44496-B5CA-4CBE-9A74-024A03A02C69}</Project>
+      <Name>NHDai19DemoEF.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NHDai19DemoEF.Model\NHDai19DemoEF.Model.csproj">
+      <Project>{0F1DD277-0055-44A5-926D-E68EB0A53D5A}</Project>
+      <Name>NHDai19DemoEF.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NHDai19DemoEF.Repository\NHDai19DemoEF.Repository.csproj">
+      <Project>{C79AF11C-CC78-4EEC-BBA2-F8FC69E9BB3A}</Project>
+      <Name>NHDai19DemoEF.Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NHDai19DemoEF.Service\NHDai19DemoEF.Service.csproj">
+      <Project>{6C5F21B6-95E2-4B7E-9872-AD322499BBCD}</Project>
+      <Name>NHDai19DemoEF.Service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
