--- a/NHDai19DemoEF.Repository/NHDai19DemoEF.Repository.csproj
+++ b/NHDai19DemoEF.Repository/NHDai19DemoEF.Repository.csproj
@@ -48,8 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorRepository.cs" />
     <Compile Include="BookRepository.cs" />
+    <Compile Include="CategoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublisherRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
