--- a/NHDai19DemoEF.Service/NHDai19DemoEF.Service.csproj
+++ b/NHDai19DemoEF.Service/NHDai19DemoEF.Service.csproj
@@ -41,10 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorService.cs" />
     <Compile Include="BookService.cs" />
+    <Compile Include="CategoryService.cs" />
     <Compile Include="Infrastructure\IService.cs" />
     <Compile Include="Infrastructure\ServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublisherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NHDai19DemoEF.Data\NHDai19DemoEF.Data.csproj">
