--- a/NHDai19DemoEF.Web/NHDai19DemoEF.Web.csproj
+++ b/NHDai19DemoEF.Web/NHDai19DemoEF.Web.csproj
@@ -1207,7 +1207,9 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ConnectionString.config" />
+    <Content Include="ConnectionString.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
