--- a/NHDai19DemoEF.Web/NHDai19DemoEF.Web.csproj
+++ b/NHDai19DemoEF.Web/NHDai19DemoEF.Web.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GlobalClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1192,6 +1193,10 @@
     <Content Include="Content\Home\images\templatemo_menu_bg.jpg" />
     <Content Include="Content\Home\css\templatemo_style.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\jquery.dataTables.min.css" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
+    <Content Include="Scripts\notify.min.js" />
+    <Content Include="Scripts\Script.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -1204,7 +1209,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ConnectionString.config">
