--- a/NHDai19DemoEF.Web/ConnectionString.config
+++ b/NHDai19DemoEF.Web/ConnectionString.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
-  <add name="ConnectionString" connectionString="Server=DESKTOP-868UP8J\SQLEXPRESS;Database=NHDai19DemoEF; Integrated Security=True" providerName="System.Data.SqlClient" />
-  <!--<add name="ConnectionString" connectionString="Data Source=Phuscer19;Initial Catalog=NHDai19DemoEF;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />-->
+  <!--<add name="ConnectionString" connectionString="Server=DESKTOP-868UP8J\SQLEXPRESS;Database=NHDai19DemoEF; Integrated Security=True" providerName="System.Data.SqlClient" />-->
+  <add name="ConnectionString" connectionString="Data Source=NHDAI\SQLEXPRESS;Initial Catalog=NHDai19DemoEF;Persist Security Info=True;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
 </connectionStrings>
